完善登录, 其余部分编辑

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -37,3 +37,16 @@ button { font: inherit; }
 .button {
     padding: 3px 10px;
 }
+.skills > ul > li {
+    position: relative;
+}
+.skills > ul > li .remove {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+.exitPreview {
+    position: fixed;
+    left: 20px;
+    top: 20px;
+}
